[package]
name = "nft-marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
mpl-core = {version =  "0.11.1", features = ["anchor"]}


[dev-dependencies]
litesvm = "0.6.1"
litesvm-token= "0.6.1"
solana-instruction = "2.1"
solana-message = "2.1"
solana-transaction = "2.1"
solana-signer = "2.1"
solana-keypair = "2.1"
solana-pubkey = "2.1"
solana-account-info = "2.1"
solana-clock = "2.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
